--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,1 +1,14 @@
+<%= link_to "Home", root_path %>
+<%= link_to "New Article", new_article_path %>
+<br>
+
 <h1>Articles</h1>
+<ul>
+    <% @articles.each do |article| %>
+      <li>
+        <%= link_to article.title, article %>
+      </li>
+    <% end %>
+</ul>
+
+
