--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with model: article do |form| %>
   <div>
-    <% form.label :title %><br>
+    <%= form.label :title %><br>
     <%= form.text_field :title %>
     <% article.errors.full_messages_for(:title).each do |message| %>
     <div style="color: red"><%= message %></div>
@@ -8,11 +8,16 @@
   </div>
 
   <div>
-    <% form.label :body %><br>
+    <%= form.label :body %><br>
     <%= form.text_field :body %>
     <% article.errors.full_messages_for(:body).each do |message| %>
       <div style="color: red"><%= message %></div>
     <% end %>
+  </div>
+
+  <div>
+    <%= form.label :status %><br>
+    <%= form.select :status, ['public', 'private', 'archived'], selected: 'public' %>
   </div>
 
   <div>
