--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,11 +3,17 @@
 <br>
 
 <h1>Articles</h1>
+
+<!--Call class method defined in the concern visible.rb to count visible article-->
+<p>Our blog has <%= Article.public_count %> articles and counting !</p>
+
 <ul>
     <% @articles.each do |article| %>
-      <li>
-        <%= link_to article.title, article %>
-      </li>
+      <% unless article.archived? %>
+          <li>
+            <%= link_to article.title, article %>
+          </li>
+      <% end %>
     <% end %>
 </ul>
 
