--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,55 +1,27 @@
 <p style="color: green"><%= notice %></p>
 
+<%= link_to "Home", root_path %>
+<%= link_to "Articles", articles_path %>
+<br>
+
+<% unless @article.archived? %>
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p>
 
 <ul>
-  <li><%= link_to "Edit", edit_article_path(@article) %></li>
-  <li><%= link_to "Destroy", article_path(@article), data: {
-    turbo_method: :delete,
-    turbo_confirm: "Are you sure?"
-  } %></li>
+  <li><%= link_to "Edit this article", edit_article_path(@article) %></li>
+  <li><%= link_to "Delete this article", article_path(@article), data: {
+                    turbo_method: :delete,
+                    turbo_confirm: "Are you sure?"
+                  } %></li>
 </ul>
 
 <h2>Comments</h2>
-<% @article.comments.each do |comment| %>
-  <p>
-    <strong>Comment :</strong>
-    <%= comment.comment %>
-  </p>
-
-  <p>
-    <%= comment.body %>
-  </p>
-<% end %>
+<%= render @article.comments %>
+  <br>
+  <%= link_to "See all comments", article_comments_path(@article) %>
 
 <h2>Add a comment</h2>
+<%= render 'comments/form' %>
 
-<%# if @comment %>
-<%= form_with model: [ @article, @comment] do |form| %>
-
-  <div>
-    <%= form.label :comment %><br>
-    <%= form.text_field :comment %>
-    <% @comment.errors.full_messages_for(:comment).each do |message| %>
-      <div style="color: red"><%= message %></div>
-    <% end %>
-  </div>
-
-  <div>
-    <%= form.label :body %><br>
-    <%= form.text_area :body %>
-    <% @comment.errors.full_messages_for(:body).each do |message| %>
-      <div style="color: red"><%= message %></div>
-    <% end %>
-  </div>
-
-  <%= form.hidden_field :article_id %>
-
-  <div>
-    <%= form.submit %>
-  </div>
 <% end %>
-
-<%= link_to "Home", root_path %>
-<%= link_to "Articles", articles_path %>
