--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this comment", @comment %> |
-  <%= link_to "Back to article", articles_path(@article) %>
+  <%= link_to "Show this comment", article_comment_path(@comment) %> |
+  <%= link_to "Back to article", article_path(@article) %>
 </div>
