--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,10 +1,9 @@
 <p style="color: green"><%= notice %></p>
 
+<% unless @comment.archived? %>
 <%= render @comment %>
-
 <div>
-  <%= link_to "Edit this comment", edit_comment_path(@comment) %> |
   <%= link_to "Back to comments", article_comments_path %>
-
-  <%= button_to "Destroy this comment", @comment, method: :delete %>
 </div>
+
+<% end %>
